# e-kiosk

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .clinerules  .editorconfig  .gitignore  .gitmodules  .markdownlint.json  AGENTS.md  BUGFIX_MULTIPLE_INHERITANCE_RTTI.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  README.md  TODO.md  cert.pem  compile_commands.json  cspell.json  dev_cert.p12  dev_cert.pem  dev_key.pem  ekiosk.pro  ekiosk.qrc  entitlements.plist  fix_headers.py  fix_template_inheritance.py  key.pem  migrate_headers.py  migrate_qregexp.py  rename_hw_all.py  rename_hw_common.py  rename_hw_vars.py  rename_members.py  rename_updateengine.py  setup-qt-env.bat  setup-qt-env.sh  test_include.cpp  update_cpp_files.py  vcpkg-configuration.json  (+2 more)
apps/: CMakeLists.txt  README.md
apps/EKiosk/: CMakeLists.txt
apps/EKiosk/src/: Info.plist  Resources.qrc  Resources.rc  main.cpp  main.h  mainwindow.cpp  mainwindow.h
apps/Updater/: .gitkeep  CMakeLists.txt  README.md
apps/Updater/src/: Info.plist  Resources.qrc  Resources.rc  SplashScreen.cpp  SplashScreen.h  SplashScreen.ui  UpdaterApp.cpp  UpdaterApp.h  main.cpp
apps/UpdaterSplashScreen/: .gitkeep  CMakeLists.txt
apps/UpdaterSplashScreen/src/: UpdaterSplashScreen.cpp  UpdaterSplashScreen.h  UpdaterSplashScreen.ui  main.cpp
apps/WatchService/: CMakeLists.txt  README.md
apps/WatchService/src/: CpuSpeed.cpp  CpuSpeed.h  Info.plist  Resources.qrc  Resources.rc  SplashScreen.cpp  SplashScreen.h  SplashScreen.ui  TimeChangeListener.cpp  TimeChangeListener.h  WatchService.cpp  WatchService.h  WatchService.ini  linux_processenumerator.cpp  mac_processenumerator.cpp  main.cpp  processenumerator.h  win_processenumerator.cpp
apps/WatchServiceController/: CMakeLists.txt  README.md
apps/WatchServiceController/src/: Info.plist  Resources.qrc  Resources.rc  WatchServiceController.cpp  WatchServiceController.h  WatchServiceController.ini  main.cpp
apps/kiosk/: CMakeLists.txt  mainwindow.ui
apps/kiosk/connection/: CheckConnection.cpp  Connect.cpp  RasConnection.h
apps/kiosk/modules/: CollectDaemons.cpp  CommandConfirm.cpp  GetBalanceAgent.h  PayDaemons.cpp  PayDaemons.h  SendOtp.cpp
apps/kiosk/src/: main.cpp  main.h  mainwindow.cpp  mainwindow.h
apps/kiosk/ui/: adminbutton.cpp  incasaciyaform.ui  mainpageloader.cpp  registrationdialog.h  searchdevicesform.cpp  selectcategorylogview.ui
apps/kiosk/updater/: update.h
deprecated/: CMakeLists.txt  README.md
deprecated/ekiosk-src/: CMakeLists.txt  mainwindow.h
deprecated/ekiosk-src/connection/: RasConnection.h
deprecated/ekiosk-src/db/: sqlconnection.h
deprecated/ekiosk-src/devices/: ClassDevice.cpp
deprecated/ekiosk-src/modules/: CheckOnline.cpp  CheckOnline.h  CollectDaemons.h  CommandConfirm.cpp  CommandConfirm.h  ConfirmOtp.cpp  ConfirmOtp.h  GetBalanceAgent.h  GetServices.h  JsonRequest.cpp  JsonRequest.h  PayDaemons.cpp  SendLogInfo.cpp  SendReceipt.cpp  SendRequest.cpp  SendRequest.h  StatusDaemons.cpp  StatusDaemons.h  UserDaemons.cpp
deprecated/ekiosk-src/other/: logClean.h  loggerValidator.h  utils.cpp  utils.h
deprecated/ekiosk-src/ui/: adminbutton.h  adminbutton.ui  admindialog.h  avtorizationtoadminin.h  avtorizationtoadminin.ui  changepassword.h  incasaciyaform.h  incasaciyaform.ui  keypud.h  loadinggprsform.cpp  registrationdialog.cpp  registrationdialog.h  registrationform.cpp  registrationform.h  searchdevicesform.cpp  selectcategorylogview.cpp
deprecated/ekiosk-src/updater/: CopyFile.h  textprogressbar.cpp  textprogressbar.h  update.cpp
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/connection/: CheckConnection.cpp  CheckConnection.h  Connect.cpp  RasConnection.cpp
src/devices/: ConstantData.h
src/devices/coinacceptor/: AbstractAcceptor.h
src/devices/modems/: ClassModem.h
src/devices/validators/: AbstractValidator.cpp  AbstractValidator.h  ClassValidator.cpp
src/devices/watchdogs/: watchdogs.h
src/interface/: CMakeLists.txt
src/interface/qmlcontrols/: button.qml  input_field.qml  keyboard_base.qml  scroll_bar.qml  scroll_view.qml  sliding_button.qml
src/modules/: AuthRequest.h  CheckOnline.h  CommandConfirm.h  ConfirmOtp.h  GetBalanceAgent.cpp  GetServices.cpp  JsonRequest.h  SendLogInfo.cpp  SendRequest.cpp  StatusDaemons.cpp
src/modules/AdBackend/: CMakeLists.txt
src/modules/Connection/: CMakeLists.txt  README.md
src/modules/CryptEngine/: CMakeLists.txt  README.md
src/modules/DatabaseProxy/: CMakeLists.txt
src/modules/DebugUtils/: CMakeLists.txt  README.md
src/modules/DeviceManager/: CMakeLists.txt  README.md
src/modules/GraphicsEngine/: CMakeLists.txt  README.md
src/modules/Hardware/: CMakeLists.txt  README.md
src/modules/KeysUtils/: CMakeLists.txt
src/modules/MessageQueue/: CMakeLists.txt
src/modules/NetworkTaskManager/: CMakeLists.txt  README.md
src/modules/Packer/: CMakeLists.txt
src/modules/Payment/: CMakeLists.txt
src/modules/SDK/: CMakeLists.txt  README.md
src/modules/ScenarioEngine/: CMakeLists.txt  README.md
src/modules/SettingsManager/: CMakeLists.txt  README.md
src/modules/SysUtils/: CMakeLists.txt  README.md
src/modules/UpdateEngine/: README.md  (+1 more)
src/other/: logClean.h  logger.h  receipt.cpp  receipt.h  systemInfo.h
src/plugins/: CMakeLists.txt  README.md
src/ui/: adminbutton.ui  admindialog.cpp  admindialog.ui  changepassword.ui  createdialupconnection.h  createdialupconnection.ui  incasaciyaform.cpp  keypud.cpp  keypud.ui  loadinggprsform.cpp  loadinggprsform.ui  mainpageloader.cpp  mainpageloader.h  mainpageloader.ui  registrationdialog.cpp  registrationform.h  registrationform.ui  searchdevicesform.ui
src/updater/: CopyFile.h
tests/: CMakeLists.txt  CTestCustom.cmake  README.md
tests/apps/: CMakeLists.txt
tests/modules/: CMakeLists.txt
tests/plugins/: CMakeLists.txt
tests/scripts/: CMakeLists.txt  test_include_reflow.py
tests/unit/: CMakeLists.txt  CheckTestMode.cpp  InstanceHelper.cpp  TestBaseApplication.cpp  TestConnectPrivilege.cpp  TestPrinterConversion.cpp  TestQFileLogger.cpp  TestStringConversions.cpp
(+2444 files in other folders)
