# EKiosk Applications CMake

# This CMakeLists.txt adds all application subdirectories for building.

add_subdirectory(EKiosk)
add_subdirectory(Updater)
# add_subdirectory(UpdaterSplashScreen)
# add_subdirectory(WatchService)
# add_subdirectory(WatchServiceController)

# Add new applications above as needed.
